@@ -3,8 +3,8 @@ package pique.utility;
 import java.io.IOException;
 import java.math.BigDecimal;
 import java.nio.charset.StandardCharsets;
-import java.nio.file.Files;
-import java.nio.file.Path;
+//import java.nio.file.Files;
+import java.nio.file.Paths;
 import java.util.Arrays;
 import java.util.Random;
 import java.util.stream.Stream;
@@ -268,7 +268,7 @@ public class PDFUtils {
 
     public static String readInputJson(String filePath){
         StringBuilder builder = new StringBuilder();
-        try (Stream<String> stream = Files.lines(Path.of(filePath), StandardCharsets.UTF_8)){
+        try (Stream<String> stream = java.nio.file.Files.lines(Paths.get(filePath), StandardCharsets.UTF_8)){
             stream.forEach(s -> builder.append(s).append("\n"));
         }catch (IOException e){
             e.printStackTrace();
